SVN Update# 652 by Vity: + support for Spanish x DownloadClient code optimalization